updated todo and reorganized front panel of initialize

--- a/Drive/Drive_Code_V2/todo.txt
+++ b/Drive/Drive_Code_V2/todo.txt
@@ -1,7 +1,6 @@
-add ereror handling for the drive code base
-  invalid commands being sent
-
 update control_loop/completely re-work control loop to be cleaner
-update commands to utilize the enum/variant method of grabbing command params
-
-add sending of "Do Nothing" commands when invalid commands are sent
+make sensor code more generic
+  have ability to create sensors on the fly
+    named sensors that take a value of a type
+    possibly stored in a map to RT FIFOs
+  each command can utilize sensors as necessary
