--- a/Drive/Drive_Code_V2/todo.txt
+++ b/Drive/Drive_Code_V2/todo.txt
@@ -26,3 +26,6 @@ add tolerances to the command finished checking for the notifier
   this should be handled in the drive train process command VIs
   
 update TankProcessCommmands.vi to utillize the actual left right of the tank drive system instead of passing everything through cheesyDrive
+
+camera angle update needs to have the camera angle applied to the current gyro, otherwise the camera angle is meaningless to the robot
+  add the camera angle to the current gyro reading to get the current camera reading.
