updated PID INversion update command to actually change the value of the PID inversion bits. tested about half of the commands

--- a/Drive/Drive_Code_V2/todo.txt
+++ b/Drive/Drive_Code_V2/todo.txt
@@ -49,3 +49,13 @@ the non-PID vals.
 create VI that can be used to grab set points for the PIDS
 
 ability to negat PID outputs
+
+tested commands:
+  tank drive
+  turn
+  drive distance
+  hold yaw
+  PID update
+  cheesy drive
+  Update Period
+  Update PID Inversions
