--- a/Drive/Drive_Code_V2/todo.txt
+++ b/Drive/Drive_Code_V2/todo.txt
@@ -47,12 +47,4 @@ the non-PID vals.
 
 ability to negat PID outputs
 
-tested commands:
-  tank drive
-  turn
-  drive distance
-  hold yaw
-  PID update
-  cheesy drive
-  Update Period
-  Update PID Inversions
+test the camera commands
