--- a/Drive/Drive_Code_V2/todo.txt
+++ b/Drive/Drive_Code_V2/todo.txt
@@ -30,6 +30,7 @@ create a document explaining the process to add a new drive train to the drive a
   create a ValidCommands VI for the new drive train that generates the list of Valid commands the drive train can handle
   add the drive train to the CreateDriveTrain polymorphic VI
   create a CreateDriveTrain VI for the new drive train
+  see 1/13/18 notes
   
 update command send VIs to be cleaner on the front panel and ensure all their names are correct
 
@@ -49,3 +50,5 @@ test the camera commands
 add ability to set conditions for when the commands are finished
   current capability will be tolerances based upon sensor readings
     sensors used are determined by the current command
+
+finish implementing Invalid drive train
